# cookiecutter-cpp

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Doxyfile  Makefile  README.md  meson.build
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/src/: main.cpp  meson.build
{{cookiecutter.project_slug}}/tests/: meson.build
